--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -234,6 +234,10 @@ calendly:
         response_type: code
     proxy:
         base_url: https://api.calendly.com
+chorus:
+    auth_mode: BASIC
+    proxy:
+        base_url: https://chorus.ai
 clari-copilot:
     auth_mode: API_KEY
     proxy:
