--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -797,6 +797,7 @@ linear:
     disable_pkce: true
     webhook_routing_script: linear-webhook-routing
     post_connection_script: linear-post-connection
+    webhook_user_defined_secret: true
 linkedin:
     auth_mode: OAUTH2
     authorization_url: https://www.linkedin.com/oauth/v2/authorization
