--- a/packages/shared/flows.yaml
+++ b/packages/shared/flows.yaml
@@ -1375,7 +1375,7 @@ integrations:
         groups: string[]
         language: string
         locale: string
-        notify_email:
+        notify_email: boolean
         backendCapabilities:
           setDisplayName: boolean
           setPassword: boolean
