--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -34,10 +34,10 @@
         "zustand": "^4.3.9"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
+        "start": "DISABLE_ESLINT_PLUGIN=true react-scripts start",
+        "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
+        "test": "DISABLE_ESLINT_PLUGIN=true react-scripts test",
+        "eject": "DISABLE_ESLINT_PLUGIN=true react-scripts eject",
         "start:hosted": "env-cmd -f .env.hosted npm run start",
         "start:staging": "env-cmd -f .env.staging npm run start",
         "start:prod": "env-cmd -f .env.prod npm run start",
