[nan-43] finish up v1->v2 conversion and improve script

--- a/integration-templates/jira/nango.yaml
+++ b/integration-templates/jira/nango.yaml
@@ -1,19 +1,20 @@
 integrations:
-    jira: # scopes: read:jira-work, offline_access
-        jira-issues:
-            runs: every 5mins
-            returns:
-                - JiraIssue
-
+  jira:
+    syncs:
+      jira-issues:
+        runs: every 5mins
+        output: JiraIssue
+        sync_type: incremental
+        endpoint: /jira/issues
 models:
-    JiraIssue:
-        id: integer
-        key: string
-        summary: string
-        issueType: string
-        status: string
-        assignee: string
-        projectKey: string
-        projectName: string
-        createdAt: date
-        updatedAt: date
+  JiraIssue:
+    id: integer
+    key: string
+    summary: string
+    issueType: string
+    status: string
+    assignee: string
+    projectKey: string
+    projectName: string
+    createdAt: date
+    updatedAt: date
