--- a/integration-templates/salesforce/nango.yaml
+++ b/integration-templates/salesforce/nango.yaml
@@ -1,78 +1,80 @@
 integrations:
-    salesforce: # scopes: offline_access,full
-        salesforce-accounts:
-            runs: every hour
-            returns:
-                - SalesforceAccount
-        salesforce-contacts:
-            runs: every hour
-            returns:
-                - SalesforceContact
-        salesforce-deals:
-            runs: every hour
-            returns:
-                - SalesforceDeal
-        salesforce-articles:
-            runs: every day
-            returns:
-                - SalesforceArticle
-        salesforce-tickets:
-            runs: every day
-            returns:
-                - SalesforceTicket
+  salesforce:
+    syncs:
+      salesforce-accounts:
+        runs: every hour
+        output: SalesforceAccount
+        sync_type: incremental
+        endpoint: /salesforce/accounts
+      salesforce-contacts:
+        runs: every hour
+        output: SalesforceContact
+        sync_type: incremental
+        endpoint: /salesforce/contacts
+      salesforce-deals:
+        runs: every hour
+        output: SalesforceDeal
+        sync_type: incremental
+        endpoint: /salesforce/deals
+      salesforce-articles:
+        runs: every day
+        output: SalesforceArticle
+        sync_type: incremental
+        endpoint: /salesforce/articles
+      salesforce-tickets:
+        runs: every day
+        output: SalesforceTicket
+        sync_type: incremental
+        endpoint: /salesforce/tickets
 models:
-    SalesforceAccount:
-        id: string
-        name: string
-        website: string
-        description: string
-        no_employees: number
-        last_modified_date: string
-
-    SalesforceContact:
-        id: string
-        first_name: string
-        last_name: string
-        email: string
-        account_id: string
-        last_modified_date: string
-
-    SalesforceDeal:
-        id: string
-        name: string
-        amount: number
-        stage: string
-        account_id: string
-        last_modified_date: string
-
-    SalesforceArticle:
-        id: string
-        title: string
-        content: string
-        last_modified_date: string
-
-    SalesforceTicket:
-        id: string
-        case_number: string
-        subject: string | null
-        account_id: string
-        account_name: string | null
-        contact_id: string
-        contact_name: string | null
-        owner_id: string
-        owner_name: string | null
-        priority: string
-        status: string
-        description: string | null
-        type: string
-        created_date: string
-        closed_date: string
-        origin: string
-        is_closed: boolean
-        is_escalated: boolean
-        conversation:
-            id: string
-            body: string
-            created_date: string
-            created_by: string
-        last_modified_date: string
+  SalesforceAccount:
+    id: string
+    name: string
+    website: string
+    description: string
+    no_employees: number
+    last_modified_date: string
+  SalesforceContact:
+    id: string
+    first_name: string
+    last_name: string
+    email: string
+    account_id: string
+    last_modified_date: string
+  SalesforceDeal:
+    id: string
+    name: string
+    amount: number
+    stage: string
+    account_id: string
+    last_modified_date: string
+  SalesforceArticle:
+    id: string
+    title: string
+    content: string
+    last_modified_date: string
+  SalesforceTicket:
+    id: string
+    case_number: string
+    subject: string | null
+    account_id: string
+    account_name: string | null
+    contact_id: string
+    contact_name: string | null
+    owner_id: string
+    owner_name: string | null
+    priority: string
+    status: string
+    description: string | null
+    type: string
+    created_date: string
+    closed_date: string
+    origin: string
+    is_closed: boolean
+    is_escalated: boolean
+    conversation:
+      id: string
+      body: string
+      created_date: string
+      created_by: string
+    last_modified_date: string
