--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,15 @@
 node_modules
 **/node_modules
 npm-debug.log
+**/dist
+
+# Private keys can be in there
+**/.env
+
+.git
+.github/
+.husky/
+docker-compose.yml
+**/nango-data
+dev/
+docs-v2/
