--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -1,5 +1,10 @@
 name: "[Release] Build service images"
-on: [push, pull_request]
+on:
+    push:
+      branches: [ master ]
+    pull_request:
+      types: [opened, synchronize]
+
 concurrency:
     group: pulls/${{ github.event.pull_request.number || github.ref }}
     cancel-in-progress: true
