--- a/.github/workflows/integration-flows.yaml
+++ b/.github/workflows/integration-flows.yaml
@@ -1,6 +1,10 @@
 name: Nango Integration Flows Compile
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    types: [opened, synchronize]
 
 concurrency:
     group: flows-compile--${{ github.event.pull_request.number || github.ref }}
