--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,6 +1,10 @@
 name: Run Unit & Integration Tests
 
-on: [push, pull_request]
+on:
+    push:
+      branches: [ master ]
+    pull_request:
+      types: [opened, synchronize]
 
 concurrency:
     group: tests-${{ github.event.pull_request.number || github.ref }}
