--- a/.github/workflows/validation.yaml
+++ b/.github/workflows/validation.yaml
@@ -1,6 +1,10 @@
 name: Yaml Validation
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    types: [opened, synchronize]
 
 concurrency:
     group: validation-${{ github.event.pull_request.number || github.ref }}
