test to see what will happen

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -2,7 +2,8 @@ name: Run Unit & Integration Tests
 
 on:
     push:
-        branches: [ master ]
+        branches:
+            - '*'
     pull_request:
 
 concurrency:
