--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -1,7 +1,7 @@
 name: "[Release] Build service images"
 on:
     push:
-        branches: '**'
+        branches: master
     pull_request:
 
 concurrency:
