--- a/.github/workflows/integration-flows.yaml
+++ b/.github/workflows/integration-flows.yaml
@@ -2,7 +2,7 @@ name: Nango Integration Flows Compile
 
 on:
     push:
-      branches: '**'
+      branches: master
     pull_request:
 
 concurrency:
