--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -2,7 +2,7 @@ name: Run Unit & Integration Tests
 
 on:
     push:
-        branches: '**'
+        branches: master
     pull_request:
 
 concurrency:
