--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -34,6 +34,7 @@
         "knex": "^2.4.2",
         "md5": "^2.3.0",
         "nanoid": "3.x",
+        "node-cron": "3.0.3",
         "superjson": "^2.2.1",
         "uuid": "^9.0.0",
         "zod": "^3.22.4"
