--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -1,7 +1,9 @@
 name: "[Release] Build service images"
 on:
     push:
-        branches: master
+        branches:
+            - master
+            - staging/**
     pull_request:
 
 concurrency:
