--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -1,9 +1,11 @@
 name: Docker Check
 
 on:
-  push:
-    branches: master
-  pull_request:
+    push:
+        branches:
+            - master
+            - staging/**
+    pull_request:
 
 concurrency:
     group: docker-${{ github.event.pull_request.number || github.ref }}
