--- a/.github/workflows/integration-flows.yaml
+++ b/.github/workflows/integration-flows.yaml
@@ -2,8 +2,11 @@ name: Nango Integration Flows Compile
 
 on:
     push:
-      branches: master
+        branches:
+            - master
+            - staging/**
     pull_request:
+
 
 concurrency:
     group: flows-compile--${{ github.event.pull_request.number || github.ref }}
