--- a/.github/workflows/validation.yaml
+++ b/.github/workflows/validation.yaml
@@ -2,8 +2,11 @@ name: Yaml Validation
 
 on:
     push:
-      branches: master
+        branches:
+            - master
+            - staging/**
     pull_request:
+
 
 concurrency:
     group: validation-${{ github.event.pull_request.number || github.ref }}
