--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -9,6 +9,11 @@ on:
 concurrency:
     group: pulls/${{ github.event.pull_request.number || github.ref }}
     cancel-in-progress: true
+
+env:
+    # Do not use GITHUB_SHA it's incorrect in PRs
+    COMMIT_SHA: ${{ github.event.pull_request.head.sha || github.sha }}
+
 jobs:
     nango-persist:
         uses: ./.github/workflows/push-container.yaml
@@ -16,28 +21,28 @@ jobs:
         with:
             package: persist
             run-cmd: ts-build
-            tags: -t nangohq/nango-persist:$GITHUB_SHA ${{ github.ref == 'refs/heads/master' && '-t nangohq/nango-persist:enterprise-$GITHUB_SHA -t nangohq/nango-persist:enterprise -t nangohq/nango-persist:hosted-$GITHUB_SHA -t nangohq/nango-persist:hosted' || '' }}
+            tags: -t nangohq/nango-persist:$COMMIT_SHA ${{ github.ref == 'refs/heads/master' && '-t nangohq/nango-persist:enterprise-$COMMIT_SHA -t nangohq/nango-persist:enterprise -t nangohq/nango-persist:hosted-$COMMIT_SHA -t nangohq/nango-persist:hosted' || '' }}
     nango-jobs:
         uses: ./.github/workflows/push-container.yaml
         secrets: inherit
         with:
             package: jobs
             run-cmd: ts-build
-            tags: -t nangohq/nango-jobs:$GITHUB_SHA ${{ github.ref == 'refs/heads/master' && '-t nangohq/nango-jobs:enterprise-$GITHUB_SHA -t nangohq/nango-jobs:enterprise -t nangohq/nango-jobs:hosted-$GITHUB_SHA -t nangohq/nango-jobs:hosted' || '' }}
+            tags: -t nangohq/nango-jobs:$COMMIT_SHA ${{ github.ref == 'refs/heads/master' && '-t nangohq/nango-jobs:enterprise-$COMMIT_SHA -t nangohq/nango-jobs:enterprise -t nangohq/nango-jobs:hosted-$COMMIT_SHA -t nangohq/nango-jobs:hosted' || '' }}
     nango-runner:
         uses: ./.github/workflows/push-container.yaml
         secrets: inherit
         with:
             package: runner
             run-cmd: ts-build
-            tags: -t nangohq/nango-runner:$GITHUB_SHA ${{ github.ref == 'refs/heads/master' && '-t nangohq/nango-runner:enterprise-$GITHUB_SHA -t nangohq/nango-runner:enterprise -t nangohq/nango-runner:hosted-$GITHUB_SHA -t nangohq/nango-runner:hosted' || '' }}
+            tags: -t nangohq/nango-runner:$COMMIT_SHA ${{ github.ref == 'refs/heads/master' && '-t nangohq/nango-runner:enterprise-$COMMIT_SHA -t nangohq/nango-runner:enterprise -t nangohq/nango-runner:hosted-$COMMIT_SHA -t nangohq/nango-runner:hosted' || '' }}
     nango-server-staging:
         uses: ./.github/workflows/push-container.yaml
         secrets: inherit
         with:
             package: server
             run-cmd: build:staging
-            tags: -t nangohq/nango-server:staging-$GITHUB_SHA
+            tags: -t nangohq/nango-server:staging-$COMMIT_SHA
     nango-server-prod:
         if: github.ref == 'refs/heads/master'
         uses: ./.github/workflows/push-container.yaml
@@ -45,7 +50,7 @@ jobs:
         with:
             package: server
             run-cmd: build:prod
-            tags: -t nangohq/nango-server:production-$GITHUB_SHA
+            tags: -t nangohq/nango-server:production-$COMMIT_SHA
     nango-server-self-hosted:
         if: github.ref == 'refs/heads/master'
         uses: ./.github/workflows/push-container.yaml
@@ -53,7 +58,7 @@ jobs:
         with:
             package: server
             run-cmd: build:hosted
-            tags: -t nangohq/nango-server:hosted -t nangohq/nango-server:hosted-$GITHUB_SHA
+            tags: -t nangohq/nango-server:hosted -t nangohq/nango-server:hosted-$COMMIT_SHA
     nango-server-enterprise:
         if: github.ref == 'refs/heads/master'
         uses: ./.github/workflows/push-container.yaml
@@ -61,4 +66,4 @@ jobs:
         with:
             package: server
             run-cmd: build:enterprise
-            tags: -t nangohq/nango-server:enterprise -t nangohq/nango-server:enterprise-$GITHUB_SHA
+            tags: -t nangohq/nango-server:enterprise -t nangohq/nango-server:enterprise-$COMMIT_SHA
