--- a/.github/workflows/push-container.yaml
+++ b/.github/workflows/push-container.yaml
@@ -13,6 +13,10 @@ on:
                 required: true
                 type: string
 
+env:
+  # Do not use GITHUB_SHA it's incorrect in PRs
+  COMMIT_SHA: ${{ github.event.pull_request.head.sha || github.sha }}
+
 jobs:
     push-container:
         runs-on: ubuntu-latest
