--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -17,28 +17,28 @@ jobs:
         with:
             package: persist
             run-cmd: ts-build
-            tags: -t nangohq/nango-persist:${{ github.sha }} ${{ github.ref == 'refs/heads/master' && '-t nangohq/nango-persist:enterprise-${{ github.sha }} -t nangohq/nango-persist:enterprise -t nangohq/nango-persist:hosted-${{ github.sha }} -t nangohq/nango-persist:hosted' || '' }}
+            tags: -t nangohq/nango-persist:${{ github.event.pull_request.head.sha }} ${{ github.ref == 'refs/heads/master' && '-t nangohq/nango-persist:enterprise-${{ github.event.pull_request.head.sha }} -t nangohq/nango-persist:enterprise -t nangohq/nango-persist:hosted-${{ github.event.pull_request.head.sha }} -t nangohq/nango-persist:hosted' || '' }}
     nango-jobs:
         uses: ./.github/workflows/push-container.yaml
         secrets: inherit
         with:
             package: jobs
             run-cmd: ts-build
-            tags: -t nangohq/nango-jobs:${{ github.sha }} ${{ github.ref == 'refs/heads/master' && '-t nangohq/nango-jobs:enterprise-${{ github.sha }} -t nangohq/nango-jobs:enterprise -t nangohq/nango-jobs:hosted-${{ github.sha }} -t nangohq/nango-jobs:hosted' || '' }}
+            tags: -t nangohq/nango-jobs:${{ github.event.pull_request.head.sha }} ${{ github.ref == 'refs/heads/master' && '-t nangohq/nango-jobs:enterprise-${{ github.event.pull_request.head.sha }} -t nangohq/nango-jobs:enterprise -t nangohq/nango-jobs:hosted-${{ github.event.pull_request.head.sha }} -t nangohq/nango-jobs:hosted' || '' }}
     nango-runner:
         uses: ./.github/workflows/push-container.yaml
         secrets: inherit
         with:
             package: runner
             run-cmd: ts-build
-            tags: -t nangohq/nango-runner:${{ github.sha }} ${{ github.ref == 'refs/heads/master' && '-t nangohq/nango-runner:enterprise-${{ github.sha }} -t nangohq/nango-runner:enterprise -t nangohq/nango-runner:hosted-${{ github.sha }} -t nangohq/nango-runner:hosted' || '' }}
+            tags: -t nangohq/nango-runner:${{ github.event.pull_request.head.sha }} -t nangohq/nango-runner:enterprise-${{ github.event.pull_request.head.sha }} -t nangohq/nango-runner:enterprise -t nangohq/nango-runner:hosted-${{ github.event.pull_request.head.sha }} -t nangohq/nango-runner:hosted
     nango-server-staging:
         uses: ./.github/workflows/push-container.yaml
         secrets: inherit
         with:
             package: server
             run-cmd: build:staging
-            tags: -t nangohq/nango-server:staging-${{ github.sha }}
+            tags: -t nangohq/nango-server:staging-${{ github.event.pull_request.head.sha }}
 
     nango-server-prod:
         if: github.ref == 'refs/heads/master'
@@ -47,7 +47,7 @@ jobs:
         with:
             package: server
             run-cmd: build:prod
-            tags: -t nangohq/nango-server:production-${{ github.sha }}
+            tags: -t nangohq/nango-server:production-${{ github.event.pull_request.head.sha }}
     nango-server-self-hosted:
         if: github.ref == 'refs/heads/master'
         uses: ./.github/workflows/push-container.yaml
@@ -55,7 +55,7 @@ jobs:
         with:
             package: server
             run-cmd: build:hosted
-            tags: -t nangohq/nango-server:hosted -t nangohq/nango-server:hosted-${{ github.sha }}
+            tags: -t nangohq/nango-server:hosted -t nangohq/nango-server:hosted-${{ github.event.pull_request.head.sha }}
     nango-server-enterprise:
         if: github.ref == 'refs/heads/master'
         uses: ./.github/workflows/push-container.yaml
@@ -63,4 +63,4 @@ jobs:
         with:
             package: server
             run-cmd: build:enterprise
-            tags: -t nangohq/nango-server:enterprise -t nangohq/nango-server:enterprise-${{ github.sha }}
+            tags: -t nangohq/nango-server:enterprise -t nangohq/nango-server:enterprise-${{ github.event.pull_request.head.sha }}
