--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -34,6 +34,7 @@
         "byots": "^5.0.0-dev.20221103.1.34",
         "chokidar": "^3.5.3",
         "commander": "^10.0.1",
+        "conf": "12.0.0",
         "copyfiles": "^2.4.1",
         "dotenv": "^16.0.3",
         "ejs": "^3.1.9",
