--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -17,21 +17,21 @@ jobs:
         with:
             package: persist
             run-cmd: ts-build
-            tags: -t nangohq/nango-persist:${{ github.event.pull_request.head.sha }} ${{ github.ref == 'refs/heads/master' && '-t nangohq/nango-persist:enterprise-${{ github.event.pull_request.head.sha }} -t nangohq/nango-persist:enterprise -t nangohq/nango-persist:hosted-${{ github.event.pull_request.head.sha }} -t nangohq/nango-persist:hosted' || '' }}
+            tags: -t nangohq/nango-persist:${{ github.event.pull_request.head.sha }} ${{ github.ref != 'refs/heads/master' && '-t nangohq/nango-persist:enterprise-${{ github.event.pull_request.head.sha }} -t nangohq/nango-persist:enterprise -t nangohq/nango-persist:hosted-${{ github.event.pull_request.head.sha }} -t nangohq/nango-persist:hosted' || '' }}
     nango-jobs:
         uses: ./.github/workflows/push-container.yaml
         secrets: inherit
         with:
             package: jobs
             run-cmd: ts-build
-            tags: -t nangohq/nango-jobs:${{ github.event.pull_request.head.sha }} ${{ github.ref == 'refs/heads/master' && '-t nangohq/nango-jobs:enterprise-${{ github.event.pull_request.head.sha }} -t nangohq/nango-jobs:enterprise -t nangohq/nango-jobs:hosted-${{ github.event.pull_request.head.sha }} -t nangohq/nango-jobs:hosted' || '' }}
+            tags: -t nangohq/nango-jobs:${{ github.event.pull_request.head.sha }} ${{ github.ref != 'refs/heads/master' && '-t nangohq/nango-jobs:enterprise-${{ github.event.pull_request.head.sha }} -t nangohq/nango-jobs:enterprise -t nangohq/nango-jobs:hosted-${{ github.event.pull_request.head.sha }} -t nangohq/nango-jobs:hosted' || '' }}
     nango-runner:
         uses: ./.github/workflows/push-container.yaml
         secrets: inherit
         with:
             package: runner
             run-cmd: ts-build
-            tags: -t nangohq/nango-runner:${{ github.event.pull_request.head.sha }} ${{ github.ref == 'refs/heads/master' && '-t nangohq/nango-runner:enterprise-${{ github.event.pull_request.head.sha }} -t nangohq/nango-runner:enterprise -t nangohq/nango-runner:hosted-${{ github.event.pull_request.head.sha }} -t nangohq/nango-runner:hosted' || '' }}
+            tags: -t nangohq/nango-runner:${{ github.event.pull_request.head.sha }} ${{ github.ref != 'refs/heads/master' && '-t nangohq/nango-runner:enterprise-${{ github.event.pull_request.head.sha }} -t nangohq/nango-runner:enterprise -t nangohq/nango-runner:hosted-${{ github.event.pull_request.head.sha }} -t nangohq/nango-runner:hosted' || '' }}
     nango-server-staging:
         uses: ./.github/workflows/push-container.yaml
         secrets: inherit
