--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -29,6 +29,7 @@
         "react-router-dom": "^6.8.2",
         "react-scripts": "5.0.1",
         "react-toastify": "^9.1.1",
+        "swr": "^2.2.5",
         "typescript": "^4.9.5",
         "web-vitals": "^2.1.4",
         "zustand": "^4.3.9"
