--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -47,6 +47,8 @@
         "passport-local": "^1.0.0",
         "pg": "^8.8.0",
         "posthog-node": "^3.1.3",
+        "rate-limiter-flexible": "^5.0.0",
+        "redis": "^4.6.11",
         "simple-oauth2": "^5.0.0",
         "uuid": "^9.0.0",
         "winston": "^3.8.2",
